# rsomics-bbduk

./: Cargo.toml  README.md
benches/: bbduk.rs  bench.rs
src/: cli.rs  filter.rs  kmer_set.rs  lib.rs  main.rs  ref_kmers.rs
tests/: compat.rs  smoke.rs
