[package]
name = "rsomics-bbduk"
version = "0.1.0"
description = "K-mer-based contaminant removal + adapter/quality trimming for FASTQ — independent clean-room Rust reimplementation of BBDuk (BBTools)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
categories = ["science", "command-line-utilities"]
keywords = ["fastq", "bioinformatics", "decontamination", "bbduk", "kmer"]

[[bin]]
name = "rsomics-bbduk"
path = "src/main.rs"

[lib]
name = "rsomics_bbduk"
path = "src/lib.rs"

[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.5" }
rsomics-help = { path = "../../../foundation/rsomics-help", version = "0.3" }
rsomics-kmer = { path = "../../../foundation/rsomics-kmer", version = "0.2" }
rsomics-seqio = { path = "../../../foundation/rsomics-seqio", version = "0.1" }
rsomics-fqgz = { path = "../../../foundation/rsomics-fqgz", version = "0.1" }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
rayon.workspace = true
needletail = { version = "0.7", default-features = false, features = ["compression"] }

[dev-dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.5", features = ["test-support", "rayon"] }
tempfile = "3"
criterion.workspace = true

[[bench]]
name = "bbduk"
harness = false

[lints]
workspace = true
