[package]
name = "rsomics-bbduk"
version = "0.1.0"
description = "K-mer-based contaminant removal + adapter/quality trimming for FASTQ — independent clean-room Rust reimplementation of BBDuk (BBTools)."
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]
readme = "README.md"
categories = ["science", "command-line-utilities"]
keywords = ["fastq", "bioinformatics", "decontamination", "bbduk", "kmer"]

[[bin]]
name = "rsomics-bbduk"
path = "src/main.rs"

[lib]
name = "rsomics_bbduk"
path = "src/lib.rs"

doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
rsomics-kmer = { version = "0.2" }
rsomics-seqio = { version = "0.1" }
rsomics-fqgz = { version = "0.1" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rayon = "1"
needletail = { version = "0.7", default-features = false, features = ["compression"] }

[dev-dependencies]
rsomics-common = { version = "0.6", features = ["test-support", "rayon"] }
tempfile = "3"
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "bbduk"
harness = false

